SEO index.html page

--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
 								<a href="#" class="item">
 									<!-- block -->
 									<div class="block">
-										<span>
+										<span class="title">
 											PRÓXIMO MÁSTER<br> 
 											Marketing Digital 
 										</span>
@@ -275,7 +275,7 @@
 								<a href="#" class="item">
 									<!-- block -->
 									<div class="block">
-										<span>
+										<span class="title">
 											PRÓXIMO CURSO<br> 
 											Community Manager
 										</span>
@@ -294,7 +294,7 @@
 								<a href="#" class="item">
 									<!-- block -->
 									<div class="block">
-										<span>
+										<span class="title">
 											PRÓXIMO WEBINAR<br>
 											Potencia el trabajo de un SDR 
 										</span>
@@ -323,7 +323,7 @@
 						<div class="col-5 col-sm-12">
 							<div class="in-quote__title">
 								<img class="lazyload" data-src="assets/quote.png">
-								<div>
+								<div class="title">
 									Formamos a los futuros <strong>talentos digitales</strong>
 								</div>
 							</div>
@@ -344,7 +344,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-12 section-title">
-							<h2>
+							<h2 class="section-title__title">
 								Másters
 							</h2>
 							<h4 class="section-title__sub">
@@ -363,7 +363,7 @@
 									<img class="img-responsive lazyload" data-src="assets/masers/master-marketing.png" alt="">
 								</picture>
 								<div class="block">
-									<h3>
+									<h3 class="title">
 										Máster en<br> Marketing Digital
 									</h3>
 									<p class="descr">
@@ -393,7 +393,7 @@
 									<img class="img-responsive lazyload" data-src="assets/masers/master-traffic-management.png" alt="">
 								</picture>
 								<div class="block">
-									<h3>
+									<h3 class="title">
 										Máster en<br> Digital Traffic Management
 									</h3>
 									<p class="descr">
@@ -420,7 +420,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-12 section-title">
-							<h2>
+							<h2 class="section-title__title">
 								Cursos
 							</h2>
 							<h4 class="section-title__sub">
@@ -434,11 +434,11 @@
 							<a href="" class="in-cursos__item">
 								<i class="icon analitica"></i>
 								<div class="block">
-									<h3>
+									<h3 class="title">
 										Curso<br>
 										Analítica Web
 									</h3>
-									<p>
+									<p class="description">
 										Aprende a medir los resultados de un negocio online e identifica oportunidades de mejora.
 									</p>
 								</div>
@@ -451,11 +451,11 @@
 							<a href="" class="in-cursos__item">
 								<i class="icon ads"></i>
 								<div class="block">
-									<h3>
+									<h3 class="title">
 										Curso<br>
 										Google Ads
 									</h3>
-									<p>
+									<p class="description">
 										Aprende a crear estrategias de captación de clientes y a realizar o mejorar tus campañas.
 									</p>
 								</div>
@@ -468,11 +468,11 @@
 							<a href="" class="in-cursos__item">
 								<i class="icon wordpress"></i>
 								<div class="block">
-									<h3>
+									<h3 class="title">
 										Curso<br>
 										WordPress
 									</h3>
-									<p>
+									<p class="description">
 										Crea tu propia página web desde cero, monta tu negocio online y aprende a gestionarlo.
 									</p>
 								</div>
@@ -485,10 +485,10 @@
 							<a href="" class="in-cursos__item">
 								<i class="icon seo"></i>
 								<div class="block">
-									<h3>
+									<h3 class="title">
 										Curso<br> Posicionamiento SEO
 									</h3>
-									<p>
+									<p class="description">
 										Desarrolla estrategias Onsite, On Page y Off page y mejora el posicionamiento orgánico de tu página web.
 									</p>
 								</div>
@@ -501,11 +501,11 @@
 							<a href="" class="in-cursos__item">
 								<i class="icon community"></i>
 								<div class="block">
-									<h3>
+									<h3 class="title">
 										Curso<br>
 										Community Manager
 									</h3>
-									<p>
+									<p class="description">
 										Maneja de forma profesional las redes y conoce lo último en herramientas de comunidad.
 									</p>
 								</div>
@@ -518,11 +518,11 @@
 							<a href="" class="in-cursos__item">
 								<i class="icon facebook"></i>
 								<div class="block">
-									<h3>
+									<h3 class="title">
 										Curso<br>
 										Facebook e Instagram Ads
 									</h3>
-									<p>
+									<p class="description">
 										Aprende a crear o mejorar tus campañas publicitarias de Social Ads y aumenta tus clientes.
 									</p>
 								</div>
@@ -551,12 +551,12 @@
 									1.
 								</span>
 								<div>
-									<h4>
+									<p class="title">
 										Títulos oficiales
-									</h4>
-									<p>
-										Certificados por Google y Facebook con validez internacional. Disponibles en nuestros másters y cursos.
 									</p>
+									<h4 class="description">
+										Certificados por Google y Facebook con validez internacional. Disponibles en nuestros másters y cursos.
+									</h4>
 								</div>
 							</div>
 						</div>
@@ -624,7 +624,7 @@
 							<div class="in-quote__title">
 								<img class="lazyload" data-src="assets/quote.png">
 								<br>
-								<span><b>Tu éxito</b> es el<br> nuestro</span>
+								<span class="title"><b>Tu éxito</b> es el<br> nuestro</span>
 							</div>
 						</div>
 						<div class="col-7">
@@ -635,7 +635,7 @@
 										<li class="carousel__slide">
 											<div class="carousel__snapper">
 												<img class="author" src="assets/feedback/paloma.png">
-												<p>
+												<p class="description">
 													“No estábamos planteando bien nuestra estrategia de Publicidad de Pago, pero gracias a este curso hemos podido reorientarla con éxito y cumplir todas las previsiones”
 												</p>
 												<div class="autor">
@@ -646,7 +646,7 @@
 										<li class="carousel__slide">
 											<div class="carousel__snapper">
 												<img class="author" src="assets/feedback/paloma.png">
-												<p>
+												<p class="description">
 													“No estábamos planteando bien nuestra estrategia de Publicidad de Pago, pero gracias a este curso hemos podido reorientarla con éxito y cumplir todas las previsiones”
 												</p>
 												<div class="autor">
@@ -657,7 +657,7 @@
 										<li class="carousel__slide">
 											<div class="carousel__snapper">
 												<img class="author" src="assets/feedback/paloma.png">
-												<p>
+												<p class="description">
 													“No estábamos planteando bien nuestra estrategia de Publicidad de Pago, pero gracias a este curso hemos podido reorientarla con éxito y cumplir todas las previsiones”
 												</p>
 												<div class="autor">
@@ -668,7 +668,7 @@
 										<li class="carousel__slide">
 											<div class="carousel__snapper">
 												<img class="author" src="assets/feedback/paloma.png">
-												<p>
+												<p class="description">
 													“No estábamos planteando bien nuestra estrategia de Publicidad de Pago, pero gracias a este curso hemos podido reorientarla con éxito y cumplir todas las previsiones”
 												</p>
 												<div class="autor">
@@ -693,7 +693,7 @@
 					<div class="row">
 						<div class="col-12 section-title">
 							<div>
-								<span>
+								<span class="section-title__title">
 									Nuestro Blog
 								</span>
 								<h4 class="section-title__sub">
@@ -718,7 +718,7 @@
 									</picture>
 								</div>
 								<div class="block">
-									<h5>
+									<h5 class="title">
 										Estrategias en Google Ads: ¿Qué son los modelos de atribución y para qué sirven?
 									</h5>
 									<ul class="list-hash-tag">
@@ -748,7 +748,7 @@
 									</picture>
 								</div>
 								<div class="block">
-									<h5>
+									<h5 class="title">
 										Estrategias en Google Ads: ¿Qué son los modelos de atribución y para qué sirven?
 									</h5>
 									<ul class="list-hash-tag">
@@ -776,7 +776,7 @@
 					<div class="row align-items-center">
 						<div class="col-5 col-lg-12">
 							<div class="in-quote__title">
-								<span><b>Formando</b> a profesionales en activo de<br> empresas como</span>
+								<span class="title"><b>Formando</b> a profesionales en activo de<br> empresas como</span>
 							</div>
 						</div>
 						<div class="col-7 col-lg-12">
@@ -831,8 +831,8 @@
 					<div class="row">
 						<div class="col-5 col-lg-12">
 							<div class="in-quote__title">
-								<span><b>Lorem ipsum<br> dolor sit<br></b> amet, conse<br> ctetur adipi<br> scing elit</span>
-								<span>
+								<span class="title"><b>Lorem ipsum<br> dolor sit<br></b> amet, conse<br> ctetur adipi<br> scing elit</span>
+								<span class="info">
 									Lorem ipsum dolor sit amet,<br> consectetur adipiscing elit sed<br> hendrerit lacinia ligula, sed<br> laoreet justo.
 								</span>
 							</div>
