add class on pages

--- a/curso-community-manager.html
+++ b/curso-community-manager.html
@@ -375,7 +375,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-12 section-title">
-							<h2>
+							<h2 class="section-title__title">
 								Objetivos
 							</h2>
 						</div>
@@ -435,7 +435,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-12 section-title">
-							<h2>
+							<h2 class="section-title__title">
 								Programa
 							</h2>
 							<h4 class="section-title__sub">
@@ -655,7 +655,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-12 section-title">
-							<h2>
+							<h2 class="section-title__title">
 								Nuestro método
 							</h2>
 							<h4 class="section-title__sub">
@@ -737,7 +737,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-12 section-title">
-							<h2>
+							<h2 class="section-title__title">
 								Profesores
 							</h2>
 							<h4 class="section-title__sub">
@@ -798,13 +798,13 @@
 					<div class="row align-items-center">
 						<div class="col-6 col-sm-12 left-block">
 							<div class="left">
-								<h3>
+								<h3 class="title">
 									Certificación
 								</h3>
-								<p>
+								<p class="description">
 									Al terminar el Curso de Community Manager te expediremos un diploma en reconocimiento de la cursada del programa emitido por Instituto Marketing para acreditar tu formación con nosotros.
 								</p>
-								<p>
+								<p class="description">
 									Además, te recomendamos realizar nuestro curso de Social & Facebook Ads y así podrás optar al examen oficial ofrecido por Facebook Blueprint. Es un título internacional que te certifica en el conocimiento de esta herramienta y te ayudará a destacar en tu CV.
 								</p>
 							</div>
@@ -817,7 +817,7 @@
 									<input type="checkbox" hidden name="certfi-g-a" id="certfi-g-a">
 									<label for="certfi-g-a">Certificación Facebook Blueprint</label>
 									<div class="descr">
-										<p>
+										<p class="description">
 											Es una certificación que abarca conceptos básicos y avanzados y reconoce la competencia de alto nivel en Facebook, Instagram y Messenger. Este título sin dudas te ayudará a destacar en el sector del marketing digital.
 										</p>
 									</div>
@@ -837,7 +837,7 @@
 							<div class="in-quote__title">
 								<img src="assets/quote.png">
 								<br>
-								<span><b>Tu éxito</b> es el<br> nuestro</span>
+								<span class="text"><b>Tu éxito</b> es el<br> nuestro</span>
 							</div>
 						</div>
 						<div class="col-7 col-sm-12">
@@ -900,8 +900,8 @@
 					<div id="btn-solicitar" class="row in-form-g__block">
 						<div class="col-5">
 							<div class="in-quote__title">
-								<span>¿Necesitas<br> <strong>más<br> información?</strong></span>
-								<span>
+								<span class="title">¿Necesitas<br> <strong>más<br> información?</strong></span>
+								<span class="info">
 									Llamándonos al 93 541 68 02 o<br> bien rellena este formulario y<br> nos pondremos en contacto<br> contigo lo antes posible.
 								</span>
 							</div>
@@ -952,8 +952,8 @@
 					<div class="row">
 						<div class="col-5 col-lg-12">
 							<div class="in-quote__title">
-								<span><b>Lorem ipsum<br> dolor sit<br></b> amet, conse<br> ctetur adipi<br> scing elit</span>
-								<span>
+								<span class="title"><b>Lorem ipsum<br> dolor sit<br></b> amet, conse<br> ctetur adipi<br> scing elit</span>
+								<span class="info">
 									Lorem ipsum dolor sit amet,<br> consectetur adipiscing elit sed<br> hendrerit lacinia ligula, sed<br> laoreet justo.
 								</span>
 							</div>
