--- a/master-marketing-digital.html
+++ b/master-marketing-digital.html
@@ -386,7 +386,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-12 section-title">
-							<h2>
+							<h2 class="section-title__title">
 								Objetivos
 							</h2>
 						</div>
@@ -446,7 +446,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-12 section-title">
-							<h2>
+							<h2 class="section-title__title">
 								Programa
 							</h2>
 							<h4 class="section-title__sub">
@@ -1121,7 +1121,7 @@
 							<div class="in-quote__title">
 								<img src="assets/quote.png">
 								<br>
-								<span><b>Tu éxito</b> es el<br> nuestro</span>
+								<span class="text"><b>Tu éxito</b> es el<br> nuestro</span>
 							</div>
 						</div>
 						<div class="col-7 col-sm-12">
