--- a/somos-instituto-marketing.html
+++ b/somos-instituto-marketing.html
@@ -295,7 +295,7 @@
 						<div class="col-5 col-md-3 col-sm-12">
 							<div class="in-quote__title">
 								<img src="assets/quote-text.png">
-								<div>
+								<div class="info">
 									Nuestra <br><strong>misión</strong>
 								</div>
 							</div>
@@ -303,10 +303,10 @@
 						<div class="col-7 col-md-9 col-sm-12">
 							<div class="before-line-g">
 								<div class="in-quote__descr">
-									<p>
+									<p class="description">
 										<strong>Ayudar a las empresas y emprendedores</strong> a crear marketing con retorno, a entender las métricas de su negocio y mejorar sus estrategias de negocios.
 									</p>
-									<p>
+									<p class="description">
 										<strong>Formar a futuros líderes</strong> en el sector del marketing online a través de programas actualizados y herramientas aplicadas a casos reales.
 									</p>
 								</div>
@@ -322,7 +322,7 @@
 					<div class="row">
 						<div class="col-12 align-items-center">
 							<img class="img-responsive" src="assets/quote.png">
-							<span>Calidad, compromiso, innovación y experiencia</span>
+							<span class="text">Calidad, compromiso, innovación y experiencia</span>
 						</div>
 					</div>
 				</div>
@@ -338,7 +338,7 @@
 								<div class="item">
 									<div class="block">
 										<span>+10</span>
-										<p>años formando<br> profesionales</p>
+										<p class="description">años formando<br> profesionales</p>
 									</div>
 								</div>
 								<!-- /item -->
@@ -346,7 +346,7 @@
 								<div class="item">
 									<div class="block">
 										<span>+50</span>
-										<p>casos de éxito<br> de agencia</p>
+										<p class="description">casos de éxito<br> de agencia</p>
 									</div>
 								</div>
 								<!-- /item -->
@@ -354,7 +354,7 @@
 								<div class="item">
 									<div class="block">
 										<span>+100</span>
-										<p>profesionales<br> egresados </p>
+										<p class="description">profesionales<br> egresados </p>
 									</div>
 								</div>
 								<!-- /item -->
@@ -369,7 +369,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-12 section-title">
-							<h2>
+							<h2 class="section-title__title">
 								Profesores
 							</h2>
 							<h4 class="section-title__sub">
@@ -521,10 +521,10 @@
 								<div class="in-nuestra__title">
 									Nuestras instalaciones
 								</div>
-								<p>
+								<p class="description">
 									Disponemos de varias aulas de formación en una de las <strong>zonas más céntricas de Barcelona.</strong> En todas ellas nuestros alumnos pueden ubicarse cómodamente, manteniendo la distancia de seguridad y accediendo a todos los recursos para utilizar sus propios ordenadores y trabajar en el momento sobre sus proyectos.
 								</p>
-								<p>
+								<p class="description">
 									Además, gracias a nuestros proyectores y sistemas de <strong>transmisión en directo,</strong> las clases se emiten mediante streaming hacia otros lugares de España desde donde más alumnos comparten su experiencia y se forman con nosotros en vivo.
 								</p>
 							</div>
