--- a/curso-analitica-web.html
+++ b/curso-analitica-web.html
@@ -377,7 +377,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-12 section-title">
-							<h2>
+							<h2 class="section-title__title">
 								Objetivos
 							</h2>
 						</div>
@@ -437,7 +437,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-12 section-title">
-							<h2>
+							<h2 class="section-title__title">
 								Programa
 							</h2>
 							<h4 class="section-title__sub">
@@ -657,7 +657,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-12 section-title">
-							<h2>
+							<h2 class="section-title__title">
 								Nuestro método
 							</h2>
 							<h4 class="section-title__sub">
@@ -739,7 +739,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-12 section-title">
-							<h2>
+							<h2 class="section-title__title">
 								Profesores
 							</h2>
 							<h4 class="section-title__sub">
@@ -850,7 +850,7 @@
 							<div class="in-quote__title">
 								<img src="assets/quote.png">
 								<br>
-								<span><b>Tu éxito</b> es el<br> nuestro</span>
+								<span class="text"><b>Tu éxito</b> es el<br> nuestro</span>
 							</div>
 						</div>
 						<div class="col-7 col-sm-12">
@@ -913,8 +913,8 @@
 					<div id="btn-solicitar" class="row in-form-g__block">
 						<div class="col-5">
 							<div class="in-quote__title">
-								<span>¿Necesitas<br> <strong>más<br> información?</strong></span>
-								<span>
+								<span class="title">¿Necesitas<br> <strong>más<br> información?</strong></span>
+								<span class="info">
 									Llamándonos al 93 541 68 02 o<br> bien rellena este formulario y<br> nos pondremos en contacto<br> contigo lo antes posible.
 								</span>
 							</div>
@@ -965,8 +965,8 @@
 					<div class="row">
 						<div class="col-5 col-lg-12">
 							<div class="in-quote__title">
-								<span><b>Lorem ipsum<br> dolor sit<br></b> amet, conse<br> ctetur adipi<br> scing elit</span>
-								<span>
+								<span class="title"><b>Lorem ipsum<br> dolor sit<br></b> amet, conse<br> ctetur adipi<br> scing elit</span>
+								<span class="info">
 									Lorem ipsum dolor sit amet,<br> consectetur adipiscing elit sed<br> hendrerit lacinia ligula, sed<br> laoreet justo.
 								</span>
 							</div>
