--- a/subscribe-nuesta-news.html
+++ b/subscribe-nuesta-news.html
@@ -376,7 +376,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-12 section-title">
-							<h2>
+							<h2 class="section-title__title">
 								Objetivos
 							</h2>
 						</div>
@@ -436,7 +436,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-12 section-title">
-							<h2>
+							<h2 class="section-title__title">
 								Programa
 							</h2>
 							<h4 class="section-title__sub">
@@ -774,7 +774,7 @@
 										Certificados por Google y Facebook con validez internacional. 
 									</span>
 									<div class="text">
-										<p>
+										<p class="description">
 											En este Máster te preparamos para los exámenes oficiales ofrecidos por Google y Facebook para que obtengas tus certificaciones en Analytics, Search y Facebook Blueprint. Son títulos internacionales que certifican tu conocimiento sobre esas herramientas y destacan en tu currículum tu experiencia profesional. 
 										</p>
 									</div>		
@@ -788,7 +788,7 @@
 										Certificados por Google y Facebook con validez internacional. 
 									</span>
 									<div class="text">
-										<p>
+										<p class="description">
 											Trabajamos con casos reales. Si tienes tu propio proyecto, te enseñaremos a mejorarlo.
 										</p>
 									</div>		
@@ -802,7 +802,7 @@
 										Nos gusta estar por ti y de manera personalizada. Menos es más.
 									</span>
 									<div class="text">
-										<p>
+										<p class="description">
 											En este Máster te preparamos para los exámenes oficiales ofrecidos por Google y Facebook para que obtengas tus certificaciones en Analytics, Search y Facebook Blueprint. Son títulos internacionales que certifican tu conocimiento sobre esas herramientas y destacan en tu currículum tu experiencia profesional. 
 										</p>
 									</div>		
@@ -816,7 +816,7 @@
 										Somos profesionales en activo y te enseñamos nuestro Know How.
 									</span>
 									<div class="text">
-										<p>
+										<p class="description">
 											En este Máster te preparamos para los exámenes oficiales ofrecidos por Google y Facebook para que obtengas tus certificaciones en Analytics, Search y Facebook Blueprint. Son títulos internacionales que certifican tu conocimiento sobre esas herramientas y destacan en tu currículum tu experiencia profesional. 
 										</p>
 									</div>		
@@ -833,7 +833,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-12 section-title">
-							<h2>
+							<h2 class="section-title__title">
 								Profesores
 							</h2>
 							<h4 class="section-title__sub">
@@ -974,22 +974,22 @@
 					<div class="row align-items-center">
 						<div class="col-6 left-block">
 							<div class="left">
-								<h3>
+								<h3 class="title">
 									Certificaciones oficiales
 								</h3>
 								<div class="subtitle">
 									Válidas internacionalmente
 								</div>
-								<p>
+								<p class="description">
 									<strong>Uno de nuestros grandes diferenciales</strong> es que te preparamos intensivamente para rendir los <strong>exámenes oficiales ofrecidos por Google y Facebook</strong> para que termines la formación con los títulos de acreditación en Analytics, Search y Facebook Blueprint.
 								</p>
-								<p>
+								<p class="description">
 									Siendo uno de los aspectos más valorados en el mercado laboral, sin dudas estas titulaciones serán las estrellas de tu futuro currículum profesional.
 								</p> 
 								<div class="subtitle">
 									Además
 								</div>
-								<p>
+								<p class="description">
 									Al terminar el Máster en Marketing Digital te expediremos un diploma en reconocimiento de la cursada del programa emitido por Instituto Marketing para acreditar tu formación con nosotros.
 								</p>
 							</div>
@@ -1002,7 +1002,7 @@
 									<input type="checkbox" hidden name="certfi-g-a" id="certfi-g-a">
 									<label for="certfi-g-a">Certificación de Google Analytics.</label>
 									<div class="descr">
-										<p>
+										<p class="description">
 											Es una certificación válida durante 18 meses y abarca conceptos básicos y avanzados de Google Analytics, entre los que se incluyen temas como: planificación, principios, implementación, recogida de datos, configuración, administración, conversión, atribución, informes, métricas y dimensiones.
 										</p>
 									</div>
@@ -1014,7 +1014,7 @@
 									<input type="checkbox" hidden name="certfi-g-ads" id="certfi-g-ads">
 									<label for="certfi-g-ads">Certificación de Google Ads</label>
 									<div class="descr">
-										<p>
+										<p class="description">
 											Es una certificación válida durante 18 meses y abarca conceptos básicos y avanzados de Google Analytics, entre los que se incluyen temas como: planificación, principios, implementación, recogida de datos, configuración, administración, conversión, atribución, informes, métricas y dimensiones.
 										</p>
 									</div>
@@ -1026,7 +1026,7 @@
 									<input type="checkbox" hidden name="certfi-g-f" id="certfi-g-f">
 									<label for="certfi-g-f">Certificación Facebook Blueprint</label>
 									<div class="descr">
-										<p>
+										<p class="description">
 											Es una certificación válida durante 18 meses y abarca conceptos básicos y avanzados de Google Analytics, entre los que se incluyen temas como: planificación, principios, implementación, recogida de datos, configuración, administración, conversión, atribución, informes, métricas y dimensiones.
 										</p>
 									</div>
@@ -1043,7 +1043,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-12 section-title">
-							<h2>
+							<h2 class="section-title__title">
 								Futuro 
 							</h2>
 							<h4 class="section-title__sub">
@@ -1100,7 +1100,7 @@
 							<div class="in-quote__title">
 								<img src="assets/quote.png">
 								<br>
-								<span><b>Tu éxito</b> es el<br> nuestro</span>
+								<span class="text"><b>Tu éxito</b> es el<br> nuestro</span>
 							</div>
 						</div>
 						<div class="col-7">
@@ -1113,7 +1113,7 @@
 												class="carousel__slide">
 											<div class="carousel__snapper">
 												<img class="author" src="assets/feedback/paloma.png">
-												<p>
+												<p class="description">
 													“No estábamos planteando bien nuestra estrategia de Publicidad de Pago, pero gracias a este curso hemos podido reorientarla con éxito y cumplir todas las previsiones”
 												</p>
 												<div class="autor">
@@ -1130,7 +1130,7 @@
 												class="carousel__slide">
 											<div class="carousel__snapper">
 												<img class="author" src="assets/feedback/paloma.png">
-												<p>
+												<p class="description">
 													“No estábamos planteando bien nuestra estrategia de Publicidad de Pago, pero gracias a este curso hemos podido reorientarla con éxito y cumplir todas las previsiones”
 												</p>
 												<div class="autor">
@@ -1147,7 +1147,7 @@
 												class="carousel__slide">
 											<div class="carousel__snapper">
 												<img class="author" src="assets/feedback/paloma.png">
-												<p>
+												<p class="description">
 													“No estábamos planteando bien nuestra estrategia de Publicidad de Pago, pero gracias a este curso hemos podido reorientarla con éxito y cumplir todas las previsiones”
 												</p>
 												<div class="autor">
@@ -1164,7 +1164,7 @@
 												class="carousel__slide">
 											<div class="carousel__snapper">
 												<img class="author" src="assets/feedback/paloma.png">
-												<p>
+												<p class="description">
 													“No estábamos planteando bien nuestra estrategia de Publicidad de Pago, pero gracias a este curso hemos podido reorientarla con éxito y cumplir todas las previsiones”
 												</p>
 												<div class="autor">
@@ -1205,8 +1205,8 @@
 					<div class="row in-form-g__block">
 						<div class="col-5">
 							<div class="in-quote__title">
-								<span>¿Necesitas<br> <strong>más<br> información?</strong></span>
-								<span>
+								<span class="title">¿Necesitas<br> <strong>más<br> información?</strong></span>
+								<span class="info">
 									Llamándonos al 93 541 68 02 o<br> bien rellena este formulario y<br> nos pondremos en contacto<br> contigo lo antes posible.
 								</span>
 							</div>
@@ -1257,8 +1257,8 @@
 					<div class="row">
 						<div class="col-5 col-lg-12">
 							<div class="in-quote__title">
-								<span><b>Lorem ipsum<br> dolor sit<br></b> amet, conse<br> ctetur adipi<br> scing elit</span>
-								<span>
+								<span class="title"><b>Lorem ipsum<br> dolor sit<br></b> amet, conse<br> ctetur adipi<br> scing elit</span>
+								<span class="info">
 									Lorem ipsum dolor sit amet,<br> consectetur adipiscing elit sed<br> hendrerit lacinia ligula, sed<br> laoreet justo.
 								</span>
 							</div>
@@ -1269,22 +1269,22 @@
 									<label for="show">Leer más</label>
 									<input type="checkbox" id="show" hidden name="show-text">
 									<div class="descr">
-										<p>
+										<p class="description">
 												Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed hendrerit lacinia ligula, sed laoreet justo aliquet sed. Vivamus erat metus, vestibulum vel sem in, euismod malesuada eros. Phasellus maximus, dolor mattis pretium tempus, diam lacus vehicula est, sit amet aliquam felis arcu eu dui. Pellentesque imperdiet, enim non bibendum placerat, est nisl viverra orci, nec suscipit justo enim vel diam. Curabitur egestas euismod rhoncus. Nulla sodales vulputate tortor eget faucibus. Pellentesque ac pulvinar nunc. Etiam consectetur, ligula quis suscipit malesuada, odio arcu imperdiet dolor, ac accumsan enim purus in massa. Mauris tristique tortor vitae laoreet hendrerit. Vivamus hendrerit est nec massa euismod, ut varius est sagittis.
 										</p>
-										<p>
+										<p class="description">
 											Fusce ut massa sit amet ipsum semper laoreet. Phasellus iaculis ex justo, a egestas sem ultrices nec. Maecenas convallis lectus arcu, sit amet euismod sem facilisis facilisis. Vivamus consequat felis et leo finibus, sed efficitur magna elementum. Vestibulum maximus libero nec dignissim molestie. Fusce turpis neque, imperdiet quis enim quis, interdum pulvinar lacus. Integer tristique augue id leo ultrices ultrices. Nunc nulla felis, tempor eu consectetur eu, tincidunt eget nibh. Proin maximus mi mi, eget convallis justo venenatis quis. Interdum et malesuada fames ac ante ipsum primis in faucibus. Proin vulputate a augue sit amet tincidunt. Donec molestie consequat ante eu pharetra. Donec commodo dictum dui, sed suscipit velit imperdiet id.
 										</p>
-										<p>
+										<p class="description">
 											Cras in elit mauris. Maecenas auctor nibh nec velit venenatis, at elementum erat pulvinar. Suspendisse quam ligula, hendrerit vel orci non, interdum egestas ex. Sed eu magna laoreet, facilisis felis nec, accumsan ligula. Nulla eget suscipit risus. Praesent ex risus, blandit a blandit sit amet, egestas quis dolor. Sed porttitor nulla ac velit feugiat placerat. Quisque pulvinar sed diam vel molestie. Phasellus vel nibh in ex dictum congue sed sed ex. Nullam vitae iaculis lacus. Maecenas fermentum diam et viverra porta. Nunc in ultrices metus. Etiam tristique sit amet elit in molestie.
 										</p>
-										<p>
+										<p class="description">
 											Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Etiam congue pellentesque est. Nulla facilisi. Duis in nibh nibh. Cras sit amet imperdiet massa, et mollis turpis. Sed varius nibh at accumsan aliquet. Curabitur facilisis diam id magna dignissim, vitae aliquet nunc feugiat. Vestibulum aliquam nibh sapien, eget consectetur ex auctor in. Suspendisse sed tempus massa. Duis eget tortor a erat pharetra molestie eu vitae nisl. Donec id leo ac nisl fermentum semper.
 										</p>
-										<p>
+										<p class="description">
 											Vestibulum luctus felis pharetra porta euismod. Quisque sit amet nibh quis sem ultricies eleifend. Donec venenatis nisl enim, consequat venenatis erat tincidunt eget. Praesent bibendum pellentesque semper. Nam cursus lorem sed ipsum bibendum, at fringilla enim maximus. Nunc vel nisi suscipit, venenatis nulla ac, scelerisque elit. Morbi consequat mi ac euismod molestie. Sed eu lacus at nisi condimentum eleifend. Integer varius et lorem et efficitur. Praesent eget justo libero. Maecenas sit amet condimentum nisl, quis vehicula sapien. Duis sit amet eros eget neque aliquam feugiat nec eget quam.
 										</p>
-										<p>
+										<p class="description">
 											Ut egestas fermentum dolor sit amet venenatis. Ut fringilla, libero a tincidunt malesuada, risus felis semper leo, in auctor lectus lorem in risus. Quisque ipsum enim, tincidunt.
 										</p>
 									</div>
